--- a/themes/NexT/_config.yml
+++ b/themes/NexT/_config.yml
@@ -358,7 +358,7 @@ reward_settings:
   comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
 
 reward:
-  wechatpay: /images/wechatpay.jpg
+  wechatpay: /images/wechatpay.png
   alipay: /images/alipay.png  
   # bitcoin: /images/bitcoin.png
 
