--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint": "^4.19.1",
     "gitalk": "^1.5.0",
     "hexo": "^3.9.0",
+    "hexo-asset-image": "git+https://github.com/7ym0n/hexo-asset-image.git",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
