--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 土豆部落
+title: 无敌土豆
 subtitle: imtudou.cn
 description: 站在巨人的肩膀上！
 keywords:
-author: 无敌小土豆
+author: 无敌土豆
 language: zh-CN
 timezone:
 
